--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,22 @@
-name: Trigger deploy
+name: Trigger for deploy
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  notify-backend:
+  notify-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger to repo deploy workflow
         run: |
-          echo "🚀 Disparando deploy en Repo de deployment..."
-          curl -X POST \
-            -H "Accept: application/vnd.github.everest-preview+json" \
-            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            https://api.github.com/repos/convidauam/convida_deployment/dispatches \
-            -d '{"event_type": "deploy-trigger"}'
+          echo "🚀 Disparando deploy en repositorio del deployment ..."
+          curl --request POST \
+            --url https://api.github.com/repos/convidauam/convida_deployment/dispatches \
+            --header 'Accept: application/vnd.github+json' \
+            --header 'Authorization: Bearer ${{ secrets.GHP_TOKEN }}' \
+            --header 'Content-Type: application/json' \
+            --header 'X-GitHub-Api-Version: 2022-11-28' \
+            --data '{
+            "event_type": "deploy-trigger"
+          }'
